Fix color contrast for footer and cards

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -19,7 +19,7 @@
 }
 
 .card-header {
-    color: #677189;
+    color: #9FA7B7;
     font-size: 18px;
     font-weight: 300;
     padding: 20px 0px;
