--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -10,7 +10,7 @@
 
 .footer span {
     font-weight: 300;
-    color: #677189;
+    color: #9FA7B7;
 }
 
 .footer img {
