--- a/src/css/Safety.css
+++ b/src/css/Safety.css
@@ -16,7 +16,7 @@ iframe {
 }
 
 .card-link {
-    color: #677189;
+    color: #9FA7B7;
     font-size: 18px;
     font-weight: 300;
     text-align: center;
